# aim_discord_bot

./: bot.py  pyproject.toml  qa_retrieval.py
